@@ -173,6 +173,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - pulsemanager.{cpp,h}: switch port definitions to std::uint16_t.
     - pulsemanager.h: add std:: namespace selector for uint32_t version
       variables.
+    - pulsemanager.{cpp,h}: add ESD support.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
